        metadata in the __init__.py of products.

      - ZSQLMethod.manage_main: Moved the error message that warns of a
        non-existing or closed database connection next to the Connection ID
        dropdown and present it using red to increase its visibility.

  after Zope 2.8.1

      - The '@' character is now allowed in object ids (RFC 1738 allows it).

    Bugs Fixed

      - Collector #1895: testrunner: omitting the 'var' from recursive
        directory walking

      - OFS.Image.manage_FTPget() would str() it's .data attribute,
        potentially loading the whole file in memory as a
        string. Changed to use RESPONSE.write() iterating through the
        Pdata chain, just like index_html().

      - Collector #1863: Prevent possibly sensitive information to leak via
        the TransientObject's __repr__ method.

      - Repaired 'handle_errors' usage for doctests, along with the
        supporting 'debug' argument passed to
        'ZPublisher.Test.publish_module'.

      - Collector #1879: applied patch by Dieter Maurer to fix a bug in 
        ac_aquire() ignoring the default argument

      - Collector #1864, #1906: fixed header normalization in appendHeader()

      - Collector #1899: fixed migration issue when using export/import for
        ZCatalog instances

      - Collector #1871: Applied patch to support lists with records using
        ZTUtils.make_query()

      - AccessControl: creating a new user through "zpasswd inituser" did not
        work properly with a top-level user folder with enabled password
        encryption.

      - ZCatalog: refreshCatalog() could not be called safely from a ZEO
        client script

      - Catalog.clear(): fixed handling of _length attribute (caused import
        problems for some .zexp files e.g. Squishdot instances)

      - DateIndex now properly removes documents from both indexes if
        the value is None

      - Collector #1888: Some parts of the TALInterpreter would not pass a 